bascket delivery options block added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="main.js"></script>
 </head>
 <body>
-
+    <header>
+        <nav>
+            <a href="#services">Услуги</a> 
+        </nav>
+        <div>
+            <a href="tel:+79812345641">+7 981 234-56-41</a>
+        </div>
+    </header>
+    <h2>Выберите пункт доставки:</h2>
 </body>
 </html>
